[package]
name = "tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
bytes = "1"
url = "2"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"